WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269212
[MultiRep HEIC] Attachments should not use a custom content type
https://bugs.webkit.org/show_bug.cgi?id=269212
Summary
[MultiRep HEIC] Attachments should not use a custom content type
Aditya Keerthi
Reported
2024-02-12 11:20:32 PST
rdar://122814734
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2024-02-12 11:27:03 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24264
EWS
Comment 2
2024-02-12 16:01:37 PST
Committed
274499@main
(09f32f1cbbdb): <
https://commits.webkit.org/274499@main
> Reviewed commits have been landed. Closing PR #24264 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug