[MultiRep HEIC] Attachments should not use a custom content type https://bugs.webkit.org/show_bug.cgi?id=269212 rdar://122814734

Reviewed by Wenson Hsieh.

274428@main resulted in the use of a custom type for <attachment> in addition
to <source>. However, to maintain client compatibility, the standard type should
be used for <attachment>.

* Source/WebCore/editing/cocoa/EditorCocoa.mm:
(WebCore::Editor::insertMultiRepresentationHEIC):

Canonical link: https://commits.webkit.org/274499@main